kubernetes/restrict_network_policy_isolate_ns_allow_ingress_k3s.yml
---
# Copyright (c) Chris Ruettimann <chris@bitbull.ch>
# This software is licensed to you under the GNU General Public License.
# There is NO WARRANTY for this software, express or
# implied, including the implied warranties of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE. You should have received a copy of GPLv2
# along with this software; if not, see
# http://www.gnu.org/licenses/gpl.txt
########### Network Restriction Policy Example ##########
#   - Apply policy:
#     `kubectl apply -f restrict_network_policy_isolate_ns_allow_ingress.yml`
#
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: isolate-namespace
  namespace: vaultwarden # Change this to match your namespace
spec:
  podSelector: {}  # Applies to all pods in the namespace
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - {}  # Allows all ingress traffic within the namespace
  egress:
  - to:
    - podSelector: {}  # Ensures egress is only within the same namespace
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.0.0.0/8      # Common private IP ranges
        - 172.16.0.0/12   # Blocking private IP ranges
        - 192.168.0.0/16  # to prevent egress to internal network ranges typically used within Kubernetes

...
